[package]
name = "rsatool"
version = "0.2.2"
authors = ["Sergei S. <div@altertech.com>"]
edition = "2021"

[dependencies]
ring = "0.16.20"
#openssl = "0.10.40"
openssl = { version = "=0.10.40", features = ["vendored"] }
base64 = "0.13.0"
clap = { version = "3.1.6", features = ["derive"] }
sha2 = "0.10.2"
hex = "0.4.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
