[package]
name = "rsatool"
version = "0.2.3"
authors = ["Serhij S. <div@altertech.com>"]
edition = "2021"

[dependencies]
ring = "0.16.20"
openssl = { version = "0.10.42" }
base64 = "0.13.0"
clap = { version = "3.1.6", features = ["derive"] }
hex = "0.4.3"

[profile.release]
strip = true
lto = true
codegen-units = 1

[features]
openssl-vendored = ["openssl/vendored"]
